--- a/format.html
+++ b/format.html
@@ -1,12 +1,16 @@
 <div class="blog-container">
   <div class="blog-div">
     <div class="blog-heading">
-
+      <h1>
+      </h1>
     </div>
-
+    <div class="blog-text">
+      <p>
+      </p>
+    </div>
   </div>
   <div>
-    
+
   </div>
 
 </div>
